cluster/home/unifi-udmp/destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: unifi-udmp
  namespace: home
spec:
  host: unifi-udmp.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      subjectAltNames:
      - unifi.local
