cluster/home/unifi-udmp/service-entry.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: unifi-udmp
  namespace: home
spec:
  hosts:
  - unifi-udmp.local
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: http
    protocol: HTTPS
  resolution: STATIC
  endpoints:
  - address: 192.168.30.1
    ports:
      http: 443
