cluster/home/unifi-udmp/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: unifi-udmp
  namespace: home
spec:
  hosts:
  - unifi.milton.mcf.io
  gateways:
  - istio-ingress/cluster-ingress-gateway
  http:
  - route:
    - destination:
        port:
          number: 443
        host: unifi-udmp.local
